# Timer-Console-App

./: README.md  pyproject.toml
.github/template/: pull_request_template.md
.github/workflows/: python-app.yml  run_python_pytest.sh
docs/: README.md  git hooks.md  python starter repo.md
docs/assets/: README.md
docs/assets/git hooks script/: pre-commit  prepare-commit-msg
src/: DESIGN_DOCUMENT.md  __init__.py  main.py
src/controllers/: authentication_controller.py  report_controller.py  task_controller.py  time_tracker_controller.py
src/data/: user_database.py
src/data/database/: users.db
src/data_loader/: category_database.py  task_database.py  time_tracker_database.py  user_database.py
src/database/: categories.db  tasks.db  timings.db  users.db
src/models/: category.py  task.py  time_tracker.py  user.py
src/services/: authentication_service.py  category_service.py  report_service.py  reporting_service.py  task_service.py  time_tracker_service.py  time_tracking_service.py
src/utils/: config.py  helpers.py  logger.py
tests/: __init__.py
tests/acceptance/: __init__.py
tests/unit/: __init__.py
