[tool.poetry]
name = "python-starter-repo"
version = "0.1.0"
description = ""
authors = ["Soliton"]
readme = "README.md"
packages = [{include = "python-starter-repo"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pydocstyle = "^6.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
